<resources>
    <string name="app_name">PPB_comffee</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_in_short">Log in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_page">Login Page</string>
    <string name="blm_pny_akun_regis">Belum punya akun? register</string>
    <string name="action_regis">Register</string>
    <string name="action_regis_short">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">profile</string>
    <string name="history">history</string>
    <string name="order">order</string>
    <string name="username">Username</string>
    <string name="address">This is your Address</string>
    <string-array name="item_name">
        <item>Biji Kopi Arabica</item>
        <item>susu oat</item>
    </string-array>
    <string-array name="item_harga">
        <item>20000</item>
        <item>50000</item>
    </string-array>
    <string-array name="item_quantity">
        <item>3</item>
        <item>12</item>
    </string-array>
</resources>