<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5c9ab"
    tools:context=".HomeFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="20dp"
        android:text="Selamat Datang Di COMFFEE"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        app:srcCompat="@drawable/ic_launcher_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/profile"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="15dp"
            android:text="@string/profile"
            android:textSize="11sp"
            android:backgroundTint="#eeebe3"/>

        <Button
            android:id="@+id/history"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="157.5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/history"
            android:textSize="11sp"
            android:backgroundTint="#eeebe3" />

        <Button
            android:id="@+id/order"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="@drawable/round_button"
            android:layout_marginStart="257.5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/order"
            android:textSize="11sp"
            android:backgroundTint="#eeebe3" />

    </RelativeLayout>

</LinearLayout>